--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.2
@@ -8,3 +10,8 @@ services:
       - ES_JAVA_OPTS=-Xms4g -Xmx4g
     ports:
       - "9200:9200"
+    command: >
+      bash -c "
+        elasticsearch-plugin install --batch analysis-stempel &&
+        /usr/local/bin/docker-entrypoint.sh eswrapper
+      "
